@@ -120,7 +120,7 @@ else
   lcopy bindist/error $SR/error 755 644
 fi
  
-sed -e "s;^#!\@perlbin\@.*;#!$PERL;" -e "s;\@prefix\@;$SR;" \
+sed -e "s;^#!\@perlbin\@.*;#!$PERL;" -e "s;\@exp_installbuilddir\@;$SR/build;" \
 	support/apxs.in > $SR/bin/apxs
 PRE=`grep "^prefix = " bindist/build/config_vars.mk`
 PRE=`echo $PRE | sed -e "s;prefix = ;;"`
